BE-blob_interactions: Updated it to work alongside updates to main branch